--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>My Projects</title>
+    <title>Our Projects</title>
   </head>
-  <body>
+  <body >
     <section class="projects-sction">
       <h1 class="title">Our Projects</h1>
       <p class="paragraph">
@@ -20,8 +20,8 @@
         <!-- button show here  -->
         
       </div>
-
-      <div class="projects row row-cols-sm-1 row-cols-lg-3  row-cols-md-2 g-4 mx-auto ">
+      <!-- row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex justify-content-between  -->
+      <div class="projects row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 p-5 ">
         <!-- cards start here  -->
         <!-- cards end here -->
         </div>
