--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
       </div>
       <!-- row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex justify-content-between  -->
-      <div class="projects row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+      <div class="projects row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 p-5 ">
         <!-- cards start here  -->
         <!-- cards end here -->
         </div>
