--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Our Projects</title>
   </head>
   <body >
-    <section class="projects-sction">
+    <section class="projects-sction mt-5 ">
       <h1 class="title">Our Projects</h1>
       <p class="paragraph">
         These projects includes Websites, Android apps, Windows apps <br />and
@@ -20,11 +20,12 @@
         <!-- button show here  -->
         
       </div>
-      <!-- row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex justify-content-between  -->
-      <div class="projects row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 p-5 ">
-        <!-- cards start here  -->
-        <!-- cards end here -->
-        </div>
+      <div class="d-flex justify-content-center align-items-center  ">
+        <div class="container projects row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+          <!-- cards start here  -->
+          <!-- cards end here -->
+          </div>
+      </div>
       </div>
 
     </section>
